fix: use cds-grid-gutter-start as per column gap

--- a/packages/web-components/src/components/grid/grid.scss
+++ b/packages/web-components/src/components/grid/grid.scss
@@ -72,7 +72,7 @@ $sub-grid: #{$prefix}--subgrid;
 }
 
 :host(#{$prefix}-grid) [subgrid][mode='condensed'][with-row-gap] {
-  row-gap: var(--cds-grid-gutter-condensed);
+  row-gap: var(--cds-grid-gutter-start);
 }
 
 // Column styles
